<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <!-- ScrollView untuk semua content -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Greeting + Profile Icon -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_greeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good_morning_mr_anwar"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/profile_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_profile_2"
                    android:background="@drawable/rounded_profile"

                    android:padding="8dp"/>
            </RelativeLayout>

            <!-- 3 Kad Balance / Order / Points -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical">

                <!-- Kad 1: Balance -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_card"
                    android:clipToPadding="false"
                    android:clipChildren="false"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/labelBalance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/belian_balance"
                        android:textSize="10sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_regular"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/tvBalance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_bold"
                        app:layout_constraintTop_toBottomOf="@id/labelBalance"
                        app:layout_constraintStart_toStartOf="@id/labelBalance"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <!-- Ikon terapung -->
                    <ImageView
                        android:id="@+id/icBalance"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_card_2"
                        android:rotation="330"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"

                        android:elevation="8dp"
                        android:translationZ="8dp"

                        android:translationX="10dp"
                        android:translationY="10dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>


                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content"/>

                <!-- Kad 2: Easy Order -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:clipToPadding="false"
                    android:clipChildren="false"
                    android:background="@drawable/rounded_card"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/labelEasyOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/easy_order"
                        android:textSize="10sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_regular"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/tvEasyOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/points"
                        android:textSize="12sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_bold"
                        app:layout_constraintTop_toBottomOf="@id/labelEasyOrder"
                        app:layout_constraintStart_toStartOf="@id/labelEasyOrder"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <!-- Optional -->
                    <ImageView
                        android:id="@+id/icEasyOrder"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_cup"
                        android:rotation="330"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"

                        android:elevation="8dp"
                        android:translationZ="8dp"

                        android:translationX="10dp"
                        android:translationY="10dp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content"/>

                <!-- Kad 3: Points -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:clipToPadding="false"
                    android:clipChildren="false"
                    android:background="@drawable/rounded_card"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/labelPoints"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/belian_points"
                        android:textSize="10sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_regular"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/tvPoints"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_130_pts"
                        android:textSize="12sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_bold"
                        app:layout_constraintTop_toBottomOf="@id/labelPoints"
                        app:layout_constraintStart_toStartOf="@id/labelPoints"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <!-- Optional -->
                    <ImageView
                        android:id="@+id/icPoints"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:rotation="330"
                        android:src="@drawable/ic_cloud"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"

                        android:elevation="8dp"
                        android:translationZ="8dp"

                        android:translationX="10dp"
                        android:translationY="10dp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>



            <!-- Banner Offer Horizontal -->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="392dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPromotion"
                    android:layout_width="match_parent"
                    android:layout_height="358dp"
                    android:layout_marginTop="28dp"
                    android:clipToPadding="false"
                    android:overScrollMode="never"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <!-- Menu Title -->

            <!-- Kek Menu (scroll with page) -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvMenuTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Menu"
                    android:textSize="18sp"
                    android:fontFamily="@font/poppins_semi_bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteY="520dp" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/rounded_line"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                    app:layout_constraintTop_toBottomOf="@+id/tvMenuTitle" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view"
                    android:gravity="center">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view"
                        android:layout_gravity="center"/>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>